feat: support dedicated adapter for classic Bluetooth scanning
Add BLUEHOOD_CLASSIC_ADAPTER env var and --classic-adapter CLI flag to
assign a separate Bluetooth adapter for classic inquiry scans. When a
dedicated classic adapter is configured, BLE and classic scans run
concurrently (safe on separate hardware). When using a single adapter,
scans run sequentially to avoid the INQUIRY deadlock from #30.

Also adds a hard timeout (asyncio.wait_for) around BleakScanner.discover()
since bleak's timeout only controls the scan window, not the D-Bus call.

Closes #32

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,8 +14,11 @@ services:
       - bluehood-data:/data
 
     # Optional: specify Bluetooth adapter (default: auto-detect)
+    # Set BLUEHOOD_CLASSIC_ADAPTER to a different adapter (e.g. a USB dongle)
+    # to run BLE and classic scans concurrently without adapter contention.
     # environment:
     #   - BLUEHOOD_ADAPTER=hci0
+    #   - BLUEHOOD_CLASSIC_ADAPTER=hci1
 
     # Web dashboard available at http://localhost:8080
 
