--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "aiosqlite>=0.19.0",
     "aiohttp>=3.9.0",
     "mac-vendor-lookup>=0.1.12",
+    "prometheus-client>=0.21.0",
 ]
 
 [project.scripts]
