--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,8 +13,10 @@ dependencies = [
     "aiosqlite>=0.19.0",
     "aiohttp>=3.9.0",
     "mac-vendor-lookup>=0.1.12",
-    "prometheus-client>=0.21.0",
 ]
+
+[project.optional-dependencies]
+metrics = ["prometheus-client>=0.21.0"]
 
 [project.scripts]
 bluehood = "bluehood.daemon:main"
