fix: Docker bind-mount permissions via PUID/PGID entrypoint (#22, #23)
Replace fixed USER directive with a gosu-based entrypoint that
remaps the container user to match host PUID/PGID at runtime.
This fixes "unable to open database file" when using bind mounts
instead of Docker volumes.

Also adds TZ environment variable support and documents
BLUEHOOD_HEARTBEAT_URL, BLUEHOOD_HEARTBEAT_INTERVAL,
and BLUEHOOD_PRUNE_DAYS env vars.

--- a/bluehood.service
+++ b/bluehood.service
@@ -1,21 +1,14 @@
 [Unit]
-Description=Bluehood Bluetooth Neighborhood Monitor Daemon
-After=bluetooth.target
+Description=Bluehood Bluetooth Monitor
+After=bluetooth.target network.target
+Wants=bluetooth.target
 
 [Service]
 Type=simple
-ExecStart=/usr/bin/python -m bluehood.daemon
+ExecStart=/usr/bin/python3 -m bluehood.daemon
 Restart=on-failure
-RestartSec=5
-
-# Security hardening
-NoNewPrivileges=false
-ProtectSystem=strict
-ProtectHome=read-only
-ReadWritePaths=%h/.local/share/bluehood /tmp
-
-# Bluetooth requires some capabilities
-AmbientCapabilities=CAP_NET_ADMIN CAP_NET_RAW
+RestartSec=10
+Environment=BLUEHOOD_DATA_DIR=/var/lib/bluehood
 
 [Install]
 WantedBy=multi-user.target
